--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cyberfood-ua---neon-delivery",
+  "name": "гусочка---кібер-доставка",
   "private": true,
   "version": "0.0.0",
   "type": "module",
