--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+
 {
-  "name": "гусочка---кібер-доставка",
+  "name": "gusochka-cyber-delivery",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.0.0",
+    "framer-motion": "^11.0.0",
     "lucide-react": "^0.475.0",
-    "react-dom": "^19.0.0",
     "react": "^19.0.0",
-    "framer-motion": "^12.0.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^6.0.0"
   }
 }
