--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^11.0.0",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.475.0",
+    "firebase": "^11.4.0",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.3.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^6.0.0"
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
+    "vite": "^6.2.0"
   }
 }
